--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/drawer": "^6.6.11",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
+    "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.8",
     "expo-google-fonts": "^0.0.0",
@@ -20,10 +23,12 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-charts": "^3.0.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
